--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@ div {text-align: center;}
 
 <div class="login">
 <h2 >Student placement prediction </h2>
-<h4>Made by Nivesh</h4>
+<h4>Developed by harsh bansal</h4>
 <!-- Main Input For Receiving Query to our ML -->
 <form action="{{ url_for('predict')}}"method="get">
 <div class="form-floating mb-3">
